# Home-Security-System

./: .env  .env.example  README.md  pyproject.toml
src/motion_detector/: __init__.py  camera.py  config.py  notifier.py
