[project]
name = "motion-detector"
version = "0.1.0"
description = "Camera-based motion detection system with email notifications"
readme = "README.md"
authors = [
    { name = "alexhtripp", email = "alextripp@ehawksolutions.com" }
]
requires-python = ">=3.12"
dependencies = [
    "opencv-python>=4.8.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
motion-detector = "motion_detector:main"

[build-system]
requires = ["uv_build>=0.9.25,<0.10.0"]
build-backend = "uv_build"
